# validation-aeson-history

./: README.md  V.hs  childfailure.json  childsuccess.json  parentfailure.json  parentfailure2.json  parentsuccess.json  validation-aeson-history.cabal
src/: Main.hs  Models.hs  V.hs  Validation.hs
src/Data/Functor/: Lift.hs
src/Data/Functor/Compose/: Reader.hs
src/Data/Validation/: Aeson.hs  Compose.hs  Historical.hs  Parser.hs  Reader.hs
src/Data/Validation2/: Aeson.hs  Historical.hs  Parser.hs
